# lab_cpp_4-2-

./: CMakeLists.txt  CPP_1.cpp  CPP_1.h  README.md  inp.txt  test.cpp
